@@ -5,27 +5,45 @@ import org.gradle.api.tasks.wrapper.Wrapper
 
 def moduleVersions = [
     foliojet         : '4.0.0-SNAPSHOT',
-    'zs-plugin'      : '2.2.3',
-    homare           : '4.0.0-SNAPSHOT',
-    'zs-balancer'    : '1.1.0',
-    'zs-epub'        : '0.1.0',
-    'zs-sac'         : '1.3.0'
+    engine           : '4.0.0-SNAPSHOT',
+    'html-balancer'  : '1.1.0',
+    'sac'         : '1.3.0'
+]
+
+def dependencyVersions = [
+    cti              : '2.2.3',
+    pdfg2d           : '1.2.0',
+    zstream          : '1.0.0-SNAPSHOT',
+    commonsCollections: '3.2.2',
+    commonsIo        : '[2.6,)',
+    commonsPrimitives: '[1.0,)',
+    batik            : '1.14',
+    httpclient       : '[4.5,)',
+    httpcore         : '[4.4,)',
+    httpmime         : '[4.5.4,)',
+    metadataExtractor: '2.19.0',
+    imageioJpeg      : '[3.12.0,)',
+    sac              : '1.3',
+    xmlApis          : '1.4.01',
+    xerces           : '2.11.0',
+    avalon           : '4.3',
+    barcode4j        : '2.1',
+    jeuclid          : '3.1.11',
+    nekohtml         : '1.9.18'
 ]
 
 def javaProjectPaths = [
-    ':zs-plugin',
-    ':homare',
-    ':zs-balancer',
-    ':zs-epub',
-    ':zs-sac'
+    ':engine',
+    ':html-balancer',
+    ':sac'
 ] as Set
 
 def runtimeDependencyCopyProjectPaths = [
-    ':homare',
+    ':engine',
 ] as Set
 
 def native2AsciiProjectPaths = [
-    ':homare'
+    ':engine'
 ] as Set
 
 allprojects {
@@ -39,7 +57,7 @@ allprojects {
 
 allprojects {
     configurations.configureEach {
-        resolutionStrategy.force 'xml-apis:xml-apis:1.4.01'
+        resolutionStrategy.force "xml-apis:xml-apis:${dependencyVersions.xmlApis}"
     }
 }
 
@@ -51,15 +69,10 @@ configure(subprojects.findAll { javaProjectPaths.contains(it.path) }) {
     apply plugin: 'java-library'
 
     java {
-        if (project.path == ':zs-plugin') {
-            sourceCompatibility = JavaVersion.VERSION_1_8
-            targetCompatibility = JavaVersion.VERSION_1_8
-        } else {
-            sourceCompatibility = JavaVersion.VERSION_21
-            targetCompatibility = JavaVersion.VERSION_21
-            toolchain {
-                languageVersion = JavaLanguageVersion.of(21)
-            }
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
         }
     }
 
@@ -123,70 +136,77 @@ configure(subprojects.findAll { javaProjectPaths.contains(it.path) }) {
     }
 }
 
-project(':zs-plugin') {
+project(':engine') {
     dependencies {
-    }
-}
-
-project(':homare') {
-    dependencies {
-        api project(':zs-plugin')
-        api('net.zamasoft:cti-if:2.2.3') {
-            exclude group: 'net.zamasoft', module: 'zs-plugin'
-        }
-        runtimeOnly('net.zamasoft:cti-driver-rest:2.2.3') {
-            exclude group: 'net.zamasoft', module: 'zs-plugin'
-        }
-        runtimeOnly('net.zamasoft:cti-server-rest:2.2.3') {
-            exclude group: 'net.zamasoft', module: 'zs-plugin'
-        }
-        api 'io.github.mimidesunya:pdfg2d-core:1.2.0'
-        api 'io.github.mimidesunya:pdfg2d-font:1.2.0'
-        api 'net.zamasoft:zstream-io:1.0.0-SNAPSHOT'
-        api 'io.github.mimidesunya:pdfg2d-pdf:1.2.0'
-        api 'net.zamasoft:zstream-resolver:1.0.0-SNAPSHOT'
-        api 'io.github.mimidesunya:pdfg2d-svg:1.2.0'
-        api project(':zs-balancer')
-        api project(':zs-sac')
-        api project(':zs-epub')
-        api 'commons-collections:commons-collections:3.2.2'
-        api 'commons-io:commons-io:[2.6,)'
-        api 'commons-primitives:commons-primitives:[1.0,)'
-        api 'org.apache.xmlgraphics:batik-svggen:1.14'
-        api 'org.apache.xmlgraphics:batik-script:1.14'
-        api 'org.apache.xmlgraphics:batik-ext:1.14'
-        api 'org.apache.xmlgraphics:batik-bridge:1.14'
-        api 'org.apache.xmlgraphics:batik-gvt:1.14'
-        api 'org.apache.xmlgraphics:batik-anim:1.14'
-        api 'org.apache.httpcomponents:httpclient:[4.5,)'
-        api 'org.apache.httpcomponents:httpcore:[4.4,)'
-        api 'org.apache.httpcomponents:httpcore-nio:[4.4,)'
-        api 'org.apache.httpcomponents:httpmime:[4.5.4,)'
-        api 'com.drewnoakes:metadata-extractor:2.19.0'
-        api 'com.twelvemonkeys.imageio:imageio-jpeg:[3.12.0,)'
-        api 'org.w3c.css:sac:1.3'
-        api 'xml-apis:xml-apis:1.4.01'
-        api 'xerces:xercesImpl:2.11.0'
-        api 'avalon-framework:avalon-framework-impl:4.3'
-        api 'net.sf.barcode4j:barcode4j:2.1'
+        api "net.zamasoft:cti-if:${dependencyVersions.cti}"
+        runtimeOnly "net.zamasoft:cti-driver-rest:${dependencyVersions.cti}"
+        runtimeOnly "net.zamasoft:cti-server-rest:${dependencyVersions.cti}"
+        api "io.github.mimidesunya:pdfg2d-core:${dependencyVersions.pdfg2d}"
+        api "io.github.mimidesunya:pdfg2d-font:${dependencyVersions.pdfg2d}"
+        api "net.zamasoft:zstream-io:${dependencyVersions.zstream}"
+        api "io.github.mimidesunya:pdfg2d-pdf:${dependencyVersions.pdfg2d}"
+        api "net.zamasoft:zstream-resolver:${dependencyVersions.zstream}"
+        api "io.github.mimidesunya:pdfg2d-svg:${dependencyVersions.pdfg2d}"
+        api project(':html-balancer')
+        api project(':sac')
+        api "commons-collections:commons-collections:${dependencyVersions.commonsCollections}"
+        api "commons-io:commons-io:${dependencyVersions.commonsIo}"
+        api "commons-primitives:commons-primitives:${dependencyVersions.commonsPrimitives}"
+        api "org.apache.xmlgraphics:batik-svggen:${dependencyVersions.batik}"
+        api "org.apache.xmlgraphics:batik-script:${dependencyVersions.batik}"
+        api "org.apache.xmlgraphics:batik-ext:${dependencyVersions.batik}"
+        api "org.apache.xmlgraphics:batik-bridge:${dependencyVersions.batik}"
+        api "org.apache.xmlgraphics:batik-gvt:${dependencyVersions.batik}"
+        api "org.apache.xmlgraphics:batik-anim:${dependencyVersions.batik}"
+        api "org.apache.httpcomponents:httpclient:${dependencyVersions.httpclient}"
+        api "org.apache.httpcomponents:httpcore:${dependencyVersions.httpcore}"
+        api "org.apache.httpcomponents:httpcore-nio:${dependencyVersions.httpcore}"
+        api "org.apache.httpcomponents:httpmime:${dependencyVersions.httpmime}"
+        api "com.drewnoakes:metadata-extractor:${dependencyVersions.metadataExtractor}"
+        api "com.twelvemonkeys.imageio:imageio-jpeg:${dependencyVersions.imageioJpeg}"
+        api "org.w3c.css:sac:${dependencyVersions.sac}"
+        api "xml-apis:xml-apis:${dependencyVersions.xmlApis}"
+        api "xerces:xercesImpl:${dependencyVersions.xerces}"
+        api "avalon-framework:avalon-framework-impl:${dependencyVersions.avalon}"
+        api "net.sf.barcode4j:barcode4j:${dependencyVersions.barcode4j}"
         api files('lib/Qrcode.jar')
-        api 'de.rototor.jeuclid:jeuclid-core:3.1.11'
+        api "de.rototor.jeuclid:jeuclid-core:${dependencyVersions.jeuclid}"
+        testImplementation 'junit:junit:4.13.2'
+    }
+
+    tasks.named('test') {
+        useJUnit()
+        enableAssertions = true
+        maxHeapSize = '256m'
+        jvmArgs '--add-exports=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED'
+        workingDir = rootProject.projectDir
+        exclude 'jp/cssj/test/unit/_0050_white_space/PageBreakByBrTest.class'
+        exclude 'jp/cssj/test/unit/_0360_text_indent/PageBreakByWrapTest.class'
+        exclude 'jp/cssj/test/unit/_0410_column_width/FlowTest.class'
+        exclude 'jp/cssj/test/unit/_1060_META/DoubleDeclMetaTest.class'
+        exclude 'jp/cssj/test/unit/_1060_META/DoubleDeclTest.class'
+        exclude 'jp/cssj/test/unit/_1060_META/DoubleMetaTest.class'
+        exclude 'jp/cssj/test/unit/_1060_META/HTMLEUCTest.class'
+        exclude 'jp/cssj/test/unit/_3000_SELECTOR/NameTest.class'
+
+        systemProperty 'java.io.tmpdir', 'local'
+        systemProperty 'java.awt.headless', 'true'
+        systemProperty 'jp.cssj.copper.config', file('src/test/resources/conf').absolutePath
+        systemProperty 'jp.cssj.driver.default', file('src/test/resources/conf/profiles/default.properties').absolutePath
+
+        doFirst {
+            new File(rootProject.projectDir, 'local/unittest/pdf').mkdirs()
+        }
     }
 }
 
-project(':zs-balancer') {
+project(':html-balancer') {
     dependencies {
-        api 'net.sourceforge.nekohtml:nekohtml:1.9.18'
+        api "net.sourceforge.nekohtml:nekohtml:${dependencyVersions.nekohtml}"
     }
 }
 
-
-project(':zs-epub') {
-    dependencies {
-    }
-}
-
-project(':zs-sac') {
+project(':sac') {
     dependencies {
     }
 }
